# mpc_controller_ros

./: README.md
docs/ipopt_install/: ipopt_arm_install_tutorial.md
mpc_controller_ros/: CMakeLists.txt  package.xml
mpc_controller_ros/include/: mpc_controller.h
mpc_controller_ros/launch/: mpc_controller_node.launch
mpc_controller_ros/params/: mpc_params.yaml
mpc_controller_ros/src/: mpc_controller.cpp  mpc_controller_node.cpp
mpc_ros/launch/: warthog_mpc_gazebo.launch  warthog_mpc_localization.launch
mpc_ros/params/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  mpc_MPC_Node_params.yaml  mpc_last_params.yaml  mpc_local_params.yaml  mpc_params.yaml  total_rviz_navigation.rviz
mpc_ros/script/: mpc_plot.py
mpc_ros/src/: MPC.cpp  MPC_Node.cpp  mpc_plannner.cpp  mpc_plannner_ros.cpp  navMPC.cpp  navMPCNode.cpp
mpc_ros/src/global_planner/: global_planner.cpp
